@@ -5,6 +5,8 @@ original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfi
 
 NOTE : this modified version is still under the Artistic License 2.0
 
+- Significant improvement of location recognition engine.
+  Now support for Senchal type city, Senchal Palace type map and inside some large buildings in cities.
 
 Version 1.6.51 : by Calamath
 - Fixed a bug that UI error occurs when LibDebugLogger is not installed.
